chore: clean up dead code
